--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.1",
     "apollo-server": "^3.12.0",
+    "bcryptjs": "^2.4.3",
     "graphql": "^16.8.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.4"
