--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^16.18.44",
