--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      - name: Navigate to Project Directory
+        run: cd frontend
+
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
