--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,5 +43,28 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+    
+      - name: Deploy to Elastic Beanstalk
+        uses: einaregilsson/beanstalk-deploy@v14
+        with:
+            aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            application_name: your-app-name
+            environment_name: your-env-name
+            version_label: ${{ github.run_id }}
+            region: us-west-1  # or your AWS region
+            zip_file: path-to-your-zipped-backend-code.zip
 
-      # Add deployment steps here. E.g., deploying to AWS, Vercel, Netlify, etc.
+      - name: Build frontend
+        run: |
+            cd frontend
+            npm run build
+
+      - name: Deploy to S3
+        uses: jakejarvis/s3-sync-action@master
+        with:
+            args: --acl public-read --follow-symlinks --delete
+            sync_dir: frontend/build/
+            bucket_name: your-s3-bucket-name
+            aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
