--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,17 +43,20 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+
+      - name: Zip Backend Code
+        run: zip -r backend.zip backend
     
       - name: Deploy to Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v14
         with:
             aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
             aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            application_name: your-app-name
-            environment_name: your-env-name
+            application_name: neo-wallet
+            environment_name: Neo-wallet-env
             version_label: ${{ github.run_id }}
-            region: us-west-1  # or your AWS region
-            zip_file: path-to-your-zipped-backend-code.zip
+            region: us-east-2
+            zip_file: backend.zip
 
       - name: Build frontend
         run: |
@@ -65,6 +68,6 @@ jobs:
         with:
             args: --acl public-read --follow-symlinks --delete
             sync_dir: frontend/build/
-            bucket_name: your-s3-bucket-name
+            bucket_name: neo-wallet-bucket
             aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
             aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
