--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,9 +45,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Zip Backend Code
-        run: cd backend
-             zip -r ../backend.zip *
-    
+        run: |
+          cd backend
+          zip -r ../backend.zip *
+      
       - name: Deploy to Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v14
         with:
