--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '18.16.0'
 
       - name: Cache Node Modules
         uses: actions/cache@v2
@@ -59,6 +59,11 @@ jobs:
             version_label: ${{ github.run_id }}-${{ github.sha }}
             region: us-east-2
             deployment_package: backend.zip
+
+      - name: Install Frontend Dependencies
+        run: |
+          cd frontend
+          npm install          
 
       - name: Build frontend
         run: |
